--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 anyhow = "1.0.66"
 rio_api = "0.7.1"
 rio_turtle = "0.7.1"
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.88"
