--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "wikidata-filter"
 version = "0.1.0"
 edition = "2021"
+description = "A tool to get the human-readable labels, descriptions, and wikidata IDs from a Wikidata dump"
+license = "Apache-2.0"
+repository = "https://github.com/alexkreidler/wikidata-filter"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
