--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ rio_turtle = "0.7.1"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.88"
 clap = { version = "4.0", features = ["derive"] } 
+serde-jsonlines = "0.4.0"
